[package]
name = "iroha_core"
build = "build.rs"

edition.workspace = true
version.workspace = true
authors.workspace = true

description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
# Default to transparent Halo2 (IPA over Pasta)
default = [
    "json",
    "bls",
    "sumeragi-permissioned",
    "fast_dsl",
    "zk-halo2",
    "zk-halo2-ipa",
    "zk-ipa-native",
    "circuit-params",
]
# Enable QUIC transport helpers for Norito Streaming.
quic = ["iroha_p2p/quic"]
# Enable Norito-backed JSON helpers throughout the core crate.
json = [
    "iroha_data_model/json",
    "iroha_crypto/json",
    "iroha_primitives/json",
]
# Enable Chinese SM algorithm family plumbing in dependent crates.
sm = [
    "iroha_crypto/sm",
    "iroha_data_model/sm",
]
# Enable app-facing convenience helpers (testing utilities shared with Torii).
app_api = []
# Support lightweight telemetry, including diagnostics
telemetry = []
# Support Prometheus metrics. See https://prometheus.io/.
expensive-telemetry = ["telemetry", "iroha_telemetry/metric-instrumentation"]
# Enable portable SIMD acceleration for small-set helpers.
simd = []
profiling = []
# Marker feature for functions used in benchmarks
bench = []
# Enable IDs-only query projections
ids_projection = ["iroha_data_model/ids_projection"]
# Enable fast DSL payload support when encoding iterable queries.
fast_dsl = ["iroha_data_model/fast_dsl"]
# Enable deterministic mock verifier for Kaigi privacy-mode tests.
kaigi_privacy_mocks = []
# ZK verifier feature flags ship enabled by default.
zk-halo2 = ["dep:kaigi_zk"]
zk-groth16 = []
zk-stark = []
# Transparent Halo2 (IPA over Pasta). Default-on.
zk-halo2-ipa = ["zk-ipa-native"]
# Native IPA polynomial-opening verifier (no external halo2 libs). Default-on.
zk-ipa-native = []
# Note: feature gating for Poseidon path is no longer used; runtime backend
# selection is supported via backend tags. Kept as a no-op to avoid breaking
# dependent tooling.
zk-halo2-ipa-poseidon = ["zk-halo2-ipa", "dep:halo2_gadgets"]
# Temporary helper to match halo2's default circuit-params toggle.
circuit-params = ["halo2_proofs/circuit-params"]
# Enable stateless pre-verify + dedup wiring (mock via metadata)
zk-preverify = []
# Gate zk-heavy tests; enable with `--features zk-tests` when needed
zk-tests = []
# Enable developer Halo2 test vectors (heavy tooling, opt-in only).
halo2-dev-tests = []
cuda = ["ivm/cuda"]

# Prototype: index ZK1 TLV tags per ProofId in WSV for future proof list/count filters.
zk-proof-tags = []

# Test/developer helper: scale Sumeragi timers inside tests to accelerate timeouts
dev-tests = []

# Enable internal test helpers (e.g., Topology fixtures) when building core tests.
iroha-core-tests = []

# Allow offline balance proof verification bypass + dummy backend in dev builds.

# Enable BLS admission-time micro-batching (deterministic grouping + bisection path in block validation).
# This forwards to `iroha_crypto/bls` and compiles the BLS path in `block.rs` guarded by `#[cfg(feature = "bls")]`.
bls = ["iroha_crypto/bls", "iroha_data_model/bls"]
bls-multi-pairing = ["iroha_crypto/bls-multi-pairing"]
zk-halo2-jemallocator = ["halo2-ecc/jemallocator"]
goldilocks_backend = ["iroha_zkp_halo2/goldilocks_backend", "ivm/goldilocks_backend"]

# Consensus mode (compile-time). Exactly one should be enabled in a given build.
# Permissioned is the default if none is specified explicitly.
sumeragi-permissioned = []
sumeragi-npos = []

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/hyperledger-iroha/iroha" }
is-it-maintained-open-issues = { repository = "https://github.com/hyperledger-iroha/iroha" }
maintenance = { status = "actively-developed" }

[dependencies]
norito = {workspace = true}
iroha_data_model = { workspace = true, default-features = false, features = ["transparent_api", "tx_predicates", "json", "bridge"] }
iroha_macro = { workspace = true }
iroha_p2p = { workspace = true }
iroha_logger = { workspace = true }
iroha_crypto = { workspace = true }
iroha_version = { workspace = true }
iroha_config = { workspace = true }
iroha_futures = { workspace = true }
iroha_telemetry = { workspace = true }
time = { workspace = true }
iroha_primitives = { workspace = true }
iroha_genesis = { workspace = true }
iroha_torii_shared = { workspace = true }
iroha_executor_data_model = { workspace = true }
ivm = { workspace = true, features = ["halo2-params"] }
fastpq_prover = { path = "../fastpq_prover" }
mv = { workspace = true }
iroha_schema = { workspace = true }
sorafs_manifest = { path = "../sorafs_manifest", default-features = false }
settlement_router = { path = "../settlement_router" }
tracing = { workspace = true }
sha2 = { version = "0.10.9", default-features = false }
sha3 = { version = "0.10.8", default-features = false, features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
rayon = { workspace = true }
base64 = { workspace = true }
rust_decimal = { workspace = true }
regex = "1.11.0"
crc64fast = "1.1"
http = "1.3.1"
halo2_proofs = { version = "0.5.1", package = "halo2-axiom", features = ["batch", "multicore"] }
halo2_gadgets = { version = "0.3.1", optional = true }
halo2-base = { version = "0.5.1" }
halo2-ecc = { version = "0.5.1", default-features = false, features = ["halo2-axiom", "display"] }
ff = "0.13.1"
iroha_zkp_halo2 = { path = "../iroha_zkp_halo2" }
zeroize = { version = "1.8.2", default-features = false, features = ["alloc", "std"] }
kaigi_zk = { path = "../kaigi_zk", optional = true }

async-trait = { workspace = true }
dashmap = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true, features = ["std", "async-await"] }
rand = { workspace = true }
rand_core_06 = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt", "io-util", "rt-multi-thread", "macros", "fs"] }
crossbeam-queue = { workspace = true }
thiserror = { workspace = true }
displaydoc = { workspace = true }
parking_lot = { workspace = true, features = ["deadlock_detection"] }
derive_more = { workspace = true }
nonzero_ext = { workspace = true }
hex = { workspace = true }
itoa = "1.0.15"
blake3 = "1.8.2"
curve25519-dalek = "4.1.3"
blake2 = { workspace = true }
iroha_file_mmap = { path = "../iroha_file_mmap" }
ciborium = { version = "0.2.2", default-features = false, features = ["std"] }
x509-parser = { version = "0.18.0", default-features = false, features = ["verify"] }
p256 = { version = "0.13.2", default-features = false, features = ["std", "ecdsa", "pkcs8"] }
der-parser = "10.0.0"
signature = { version = "2.2.0", default-features = false, features = ["std"] }
once_cell = { workspace = true }
yasna = "0.5.2"

uuid = { version = "1.18.1", features = ["v4"] }
indexmap = "2.12.0"
arc-swap = "1.7.1"

[dev-dependencies]
iroha_test_samples = { workspace = true }
iroha_config_base = { workspace = true }

criterion = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }
expect-test = { workspace = true }
proptest = { version = "1.9.0", default-features = false, features = ["std"] }
rcgen = "0.14.5"

[[bench]]
name = "validation"
harness = false

[[bench]]
name = "kura"
harness = false

[[bench]]
name = "apply_blocks"
harness = false
path = "benches/blocks/apply_blocks_benchmark.rs"
required-features = ["bench"]

[[bench]]
name = "validate_blocks"
harness = false
path = "benches/blocks/validate_blocks_benchmark.rs"

[[bench]]
name = "zk_poseidon"
harness = false
required-features = ["zk-halo2", "zk-halo2-ipa", "zk-halo2-ipa-poseidon"]

[[bench]]
name = "isi_gas_calibration"
path = "benches/isi_gas_calibration.rs"
harness = false

[[bench]]
name = "queries"
harness = false

[[example]]
name = "apply_blocks"
harness = false
path = "benches/blocks/apply_blocks_oneshot.rs"
required-features = ["bench"]

[[example]]
name = "validate_blocks"
harness = false
path = "benches/blocks/validate_blocks_oneshot.rs"

[package.metadata.cargo-all-features]
denylist = [
    "schema-endpoint",
    "telemetry",
]
skip_optional_dependencies = true

[[test]]
name = "kaigi_privacy"
path = "tests/kaigi_privacy.rs"
required-features = ["zk-tests"]
