[package]
name = "iroha_data_model_derive"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true

[lints]
workspace = true

[features]
std = []
trybuild-tests = []
transparent_api = []

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["default", "full", "extra-traits", "visit-mut"] }
quote = { workspace = true }
darling = { workspace = true }
proc-macro2 = { workspace = true }
manyhow = { workspace = true }
iroha_derive = { workspace = true }

[dev-dependencies]
norito = {workspace = true}
iroha_schema = { workspace = true }
derive_more = { workspace = true }
criterion = { workspace = true }
iroha_data_model = { workspace = true }

trybuild = { workspace = true }
