[package]
name = "iroha_executor_data_model_derive"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true

[lints]
workspace = true

[features]
trybuild-tests = []

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
manyhow.workspace = true

[dev-dependencies]
iroha_executor_data_model.workspace = true
iroha_data_model.workspace = true
iroha_schema.workspace = true
norito.workspace = true
trybuild.workspace = true
