[package]
name = "iroha_executor_derive"

version.workspace = true
authors.workspace = true
edition.workspace = true

license.workspace = true

[lints]
workspace = true

[features]
trybuild-tests = []

[lib]
proc-macro = true

[dependencies]
iroha_derive = { workspace = true }

syn = { workspace = true, features = ["full", "derive"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
manyhow = { workspace = true }
darling = { workspace = true }

[dev-dependencies]
iroha_executor = { workspace = true }
trybuild = { workspace = true }
