[package]
name = "iroha_ffi"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true
categories = ["development-tools::ffi"]

[lints]
workspace = true

[features]
# Enables sharing mutable references of non-robust transmutable types across FFI.
# When handing out non-robust mutable references across FFI, it's possible for the caller
# to modify the given reference and store a trap representation causing immediate UB.
non_robust_ref_mut = []
ivm = []

[dependencies]
iroha_ffi_proc_macro = { path = "proc_macro" }

derive_more = { workspace = true, features = ["display", "constructor"] }

[dev-dependencies]
# `webassembly-test` pulled in an incompatible `mv` crate; remove it to
# resolve compilation failure.
getset = { workspace = true }
