[package]
name = "iroha_futures"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true

[lints]
workspace = true

[features]
default = []
# Support lightweight telemetry, including diagnostics
telemetry = ["iroha_derive/telemetry"]

[dependencies]
iroha_derive = { workspace = true, features = ["futures"] }

iroha_config = { workspace = true }
iroha_logger = { workspace = true }
norito = {workspace = true}

rand = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "signal", "time"] }
tokio-util = { workspace = true }
thiserror = { workspace = true }
error-stack = { workspace = true }

[dev-dependencies]
tokio-stream = { version = "0.1.17", features = ["sync"] }
