[package]
name = "iroha_genesis"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true

[lints]
workspace = true

[dependencies]
norito = {workspace = true}
iroha_crypto = { workspace = true }
iroha_schema = { workspace = true }
iroha_data_model = { workspace = true, features = ["std", "json"] }
iroha_executor_data_model = { workspace = true }
iroha_version = { workspace = true }
iroha_primitives = { workspace = true }
iroha_config = { workspace = true }
hex = { workspace = true, optional = false }
base64 = { workspace = true }

derive_more = { workspace = true, features = ["deref"] }
eyre = { workspace = true }

[dev-dependencies]
iroha_crypto = { workspace = true, features = ["rand"] }
iroha_test_samples = { workspace = true }

tempfile = { workspace = true }
