[package]
name = "iroha_js_host"

edition.workspace = true
version.workspace = true
authors.workspace = true

license.workspace = true

build = "build.rs"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
napi = { version = "3.5.1", default-features = false, features = ["napi6", "tokio_rt"] }
napi-derive = { version = "3.3.2", default-features = false, features = ["type-def"] }
iroha_crypto = { workspace = true, features = ["std", "rand", "sm"] }
iroha_core = { workspace = true, features = ["iroha-core-tests"] }
iroha_data_model = { workspace = true, features = ["std", "json", "transparent_api"] }
iroha_primitives = { workspace = true }
norito = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
rand_core_06 = { workspace = true }
sorafs_manifest = { workspace = true }
sorafs_car = { workspace = true, features = ["manifest"] }
blake3 = { workspace = true }
sorafs_chunker = { workspace = true }
sorafs_orchestrator = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
iroha = { workspace = true }
kaigi_zk = { path = "../kaigi_zk" }
halo2_proofs = { version = "0.5.1", package = "halo2-axiom", features = ["batch", "multicore", "circuit-params"] }
bs58 = "0.5.1"

[dev-dependencies]
tempfile = { workspace = true }
