[package]
name = "iroha_kagami"     # Translates to teacher, the exemplar, the looking glass.

edition.workspace = true
version.workspace = true
authors.workspace = true

description = "A tool used to generate cryptographic keys, docs, the schema and genesis block."

license.workspace = true

[lints]
workspace = true

[dependencies]
norito = {workspace = true}
iroha_executor_data_model.workspace = true
iroha_data_model.workspace = true
iroha_crypto.workspace = true
iroha_schema_gen.workspace = true
iroha_primitives.workspace = true
iroha_genesis.workspace = true
iroha_test_samples.workspace = true
iroha_schema.workspace = true
iroha_core.workspace = true
iroha_version.workspace = true

iroha_swarm = { path = "../iroha_swarm" }

clap = { workspace = true, features = ["derive"] }
clap-markdown = "0.1.5"
owo-colors = { workspace = true, features = ["supports-colors"] }
color-eyre.workspace = true
derive_more.workspace = true
toml = { version = "0.9.8" }

tiny-keccak.workspace = true
hex = { workspace = true }

inquire = "0.9.1"

[dev-dependencies]
tempfile = { workspace = true }
iroha_config = { workspace = true }
base64.workspace = true

[features]
default = ["bls"]
bls = ["iroha_crypto/bls"]
ml-dsa = ["iroha_crypto/ml-dsa"]
gost = ["iroha_crypto/gost"]
sm = ["iroha_crypto/sm"]
# Enable codec subcommands that depend on exhaustive Norito conversions.
codec = []

## No build script is required anymore.
## Previously, a heavy build.rs generated sample binaries by depending on
## iroha_data_model and norito at build time, which slowed down or appeared to
## hang during "building the model". The samples are pre-generated and checked in.

[[bin]]
name = "kagami"
path = "src/main.rs"

[[example]]
name = "codec_samples"
path = "samples/codec/generate.rs"
