[package]
name = "iroha_monitor"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time", "signal", "process"] }
clap = { workspace = true, features = ["derive"] }
attohttpc = { version = "0.30.1", default-features = false }
axum = { workspace = true, features = ["json", "tokio", "http1"] }
crossterm = { version = "0.29" }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
norito = {workspace = true}
unicode-width = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cpal = { version = "0.16" }

[target.'cfg(target_os = "windows")'.dependencies]
cpal = { version = "0.16" }

[target.'cfg(target_os = "linux")'.dependencies]
cpal = { version = "0.16", optional = true }

[features]
default = []
linux-builtin-synth = ["dep:cpal"]
